<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- SEÇÃO DE DADOS  -->
    <data/>

    <!-- SEÇÃO DE LAYOUT -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light">

        <!-- Esta view permite a criacao de uma barra de rolagem
             - Permite apenas um filho que deve ser um layout!!!-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Layout interno do scrollview -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Convenção para nomes de ids
                        - evita conflito de nomes quando mais de um layout
                        for utilizado para compor outro layout

                     Padrão usado para nomes:
                         <nome arquivo>_<tipo componente>_<nome do componente>
                -->
                <Button
                    android:id="@+id/main_btn_botao1"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao2"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao3"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao4"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao5"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao6"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_1"/>

                <Button
                    android:id="@+id/main_btn_botao7"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_7"/>

                <Button
                    android:id="@+id/main_btn_botao8"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_8"/>

                <Button
                    android:id="@+id/main_btn_google"
                    android:drawableStart="@drawable/google"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_google"/>

                <Button
                    android:id="@+id/main_btn_camera"
                    android:drawableStart="@drawable/ic_camera"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_camera"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>


</layout>
